--- a/gui/index.html
+++ b/gui/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1c5452d6e1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>English Cloze</title>
 </head>
-
 <body>
-    <h1>English Cloze</h1>
-    <section id="container"></section>
-    <button id="answer">ANSWER</button>
-    <script>
-        const { ipcRenderer } = require('electron')
-        ipcRenderer.on('ping', function (event, message) {
-            console.log(message);
-        });
-    </script>
+    <section class="container">
+        <header>
+            <h1><i class="fas fa-vote-yea"></i>English Cloze Exercise</h1>
+            <div class="score">
+                <ul>
+                    <li>
+                        Correct : <span id="correct-score">0</span>
+                    </li>
+                    <li>
+                        Wrong : <span id="wrong-score">0</span>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <section class="work-space">
+        </section>
+        <footer>
+            <div class="total" id="total">
+                Totally <b></b> cloze inside database
+            </div>
+            <ul>
+                <li id="keyword-btn">
+                    KEYWORDS
+                </li>
+                <li id="source-btn">
+                    SOURCE 
+                </li>
+                <li id="setup-btn">
+                    SETUP
+                </li>
+                <li id="fresh-btn">
+                    FRESH
+                </li>
+            </ul>
+        </footer>
+    </section>
+    <section id="modal-box"></section>
     <script type="module" src="./index.js" async></script>
 </body>
 
