--- a/gui/index.html
+++ b/gui/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <section class="container">
+
         <header>
             <h1><i class="fas fa-vote-yea"></i>English Cloze Exercise</h1>
             <div class="score">
@@ -23,13 +24,21 @@
                 </ul>
             </div>
         </header>
+
         <section class="work-space">
         </section>
+
         <footer>
             <div class="total" id="total">
                 Totally <b></b> cloze inside database
             </div>
             <ul>
+                <li id="wrong-log-btn">
+                    WRONG LOG
+                </li>
+                <li id="config-btn">
+                    CONFIG
+                </li>
                 <li id="keyword-btn">
                     KEYWORDS
                 </li>
