add open folder of file-souce feature

--- a/gui/index.html
+++ b/gui/index.html
@@ -43,7 +43,10 @@
                     KEYWORDS
                 </li>
                 <li id="source-btn">
-                    SOURCE 
+                    URL 
+                </li>
+                <li id="file-btn">
+                    FILE
                 </li>
                 <li id="setup-btn">
                     SETUP
